--- a/css/style.css
+++ b/css/style.css
@@ -20,3 +20,10 @@ body{
     height:100px;
     position: absolute;
 }
+
+.catapult{
+    background-image: url("../images/catapult.png");
+    background-size: 100% 100%;
+    height: 100px;
+    width: 100px;
+}
