--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,12 @@ body{
 .catapult{
     background-image: url("../images/catapult.png");
     background-size: 100% 100%;
+    height: 80px;
+    width: 100px;
+}
+.blu{
+    background-image: url("../images/rio.png");
+    background-size: 100% 100%;
     height: 100px;
     width: 100px;
 }
