--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ body{
     height: 80px;
     width: 100px;
 }
-.blu{
+.bird{
     background-image: url("../images/rio.png");
     background-size: 100% 100%;
     height: 100px;
